--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title></title>
-    <script src="./js/script.js"></script>
-    <link rel="stylesheet" href="./css/style.css" />
+    
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 			</div>
 	</div>
 
-  <script src="./js/script.js"></script>
+  <script src="script.js"></script>
 
 
 
